# Flashcard-Retention-Ranking-Model

./: .gitignore  README.md  eda.ipynb  feature_engineering.ipynb  pyproject.toml  retention_model.ipynb
